# os-collect-config

./: .coveragerc  .gitignore  .gitreview  .stestr.conf  .travis.yml  README.md  README.rst  openstack-common.conf  os-collect-config-and-friends.odg  requirements.txt  run_tests.sh  setup.cfg  setup.py  test-requirements.txt  tox.ini
cornfig/: cornfig.py
os_apply_config/: collect.py  config_exception.py  os_apply_config.py
os_apply_config/tests/: test_json_renderer.py  test_os_apply_config.py  test_value_type.py
os_collect_config/: cache.py  cfn.py  collect.py  config_drive.py  ec2.py  exc.py  heat.py  heat_local.py  keystone.py  local.py  merger.py  request.py  version.py  zaqar.py
os_collect_config/openstack/common/: gettextutils.py  importutils.py  jsonutils.py  log.py  strutils.py
os_collect_config/tests/: test_cache.py  test_cfn.py  test_collect.py  test_config_drive.py  test_ec2.py  test_heat.py  test_heat_local.py  test_keystone.py  test_local.py  test_merger.py  test_request.py  test_zaqar.py
os_config_applier/: config_exception.py  os_config_applier.py  renderers.py  value_types.py
os_config_applier/tests/: test_json_renderer.py  test_os_config_applier.py  test_value_type.py
releasenotes/notes/: drop-python2.7-support-f133b716812d39f0.yaml  messaging-v2-b4310b93ffcd1c01.yaml  remove-py38-c31bbace9fe0b2a7.yaml
tests/: cornfig_tests.py  json_renderer_tests.py  os_config_applier_tests.py  value_type_tests.py
tests/templates/etc/glance/: script.conf
tests/templates/etc/keystone/: keystone.conf
zuul.d/: layout.yaml
