[metadata]
name = os-collect-config
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
summary = Collect and cache metadata, run hooks on changes.
description-file =
	README.rst
home-page = https://opendev.org/openstack/os-collect-config
classifier =
	Development Status :: 4 - Beta
	Environment :: Console
	Environment :: OpenStack
	Intended Audience :: Developers
	Intended Audience :: Information Technology
	License :: OSI Approved :: Apache Software License
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7

[files]
packages =
	os_collect_config

[global]
setup-hooks =
	pbr.hooks.setup_hook

[entry_points]
console_scripts =
	os-collect-config = os_collect_config.collect:__main__

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0
