[metadata]
name = os-collect-config
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
summary = Collect and cache metadata, run hooks on changes.
description_file =
	README.rst
home_page = https://opendev.org/openstack/os-collect-config
python_requires = >=3.8
classifier =
	Development Status :: 4 - Beta
	Environment :: Console
	Environment :: OpenStack
	Intended Audience :: Developers
	Intended Audience :: Information Technology
	License :: OSI Approved :: Apache Software License
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11

[files]
packages =
	os_collect_config

[entry_points]
console_scripts =
	os-collect-config = os_collect_config.collect:main
